--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
   <script>
     const BOT_ID = "7471918135969447962";
-    const BACKEND_URL = "http://d5628635.natappfree.cc/serviceB";
+    const BACKEND_URL = "https://bpsy.mynatapp.cc/serviceB";
 
     function initChatWithOAuth() {
       const userId = document.getElementById("userIdInput").value;
@@ -114,4 +114,3 @@
   </script>
 </body>
 </html>
-
