--- a/index.html
+++ b/index.html
@@ -2,68 +2,186 @@
 <html>
 <head>
   <title>Coze OAuth 聊天示例</title>
-  <!-- 引入 Coze SDK -->
   <script src="https://lf-cdn.coze.cn/obj/unpkg/flow-platform/chat-app-sdk/1.2.0-beta.10/libs/cn/index.js"></script>
   <style>
-    body {
+    :root {
+      --primary-color: #4ECDC4;
+      --text-color: #333;
+      --light-gray: #F8F9FA;
+      --border-color: #E9ECEF;
+    }
+
+    * {
       margin: 0;
       padding: 0;
-      font-family: "Helvetica Neue", sans-serif;
-      background-color: #f4f6f8;
+      box-sizing: border-box;
+      font-family: "Inter", sans-serif;
     }
 
-    .container {
+    body {
+      background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+      min-height: 100vh;
+      display: flex;
+      color: var(--text-color);
+    }
+
+    .left-panel {
+      width: 400px;
+      background: white;
+      box-shadow: 4px 0 20px rgba(0, 0, 0, 0.05);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 40px;
       text-align: center;
-      padding: 30px;
-      background-color: #fff;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     }
 
-    #userIdInput {
-      padding: 10px;
-      width: 250px;
-      font-size: 16px;
-      border-radius: 4px;
-      border: 1px solid #ccc;
+    .login-content, .welcome-content {
+      width: 100%;
     }
 
-    button {
-      padding: 10px 20px;
+    .welcome-content {
+      display: none;
+    }
+
+    .logo-container {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      overflow: hidden;
+      margin: 0 auto 25px;
+    }
+
+    .logo-container img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .login-title {
+      font-size: 24px;
+      font-weight: 600;
+      margin-bottom: 10px;
+    }
+
+    .login-subtitle {
+      font-size: 14px;
+      color: #666;
+      opacity: 0.9;
+      margin-bottom: 30px;
+    }
+
+    .form-group {
+      width: 100%;
+      margin-bottom: 20px;
+    }
+
+    .form-control {
+      width: 100%;
+      padding: 14px 16px;
       font-size: 16px;
-      margin-left: 10px;
-      background-color: #007aff;
-      color: white;
+      border: 1px solid var(--border-color);
+      border-radius: 8px;
+      background: var(--light-gray);
+      outline: none;
+      transition: border-color 0.3s ease;
+    }
+
+    .form-control:focus {
+      border-color: var(--primary-color);
+      box-shadow: 0 0 0 3px rgba(78, 205, 196, 0.2);
+    }
+
+    .btn {
+      width: 100%;
+      padding: 14px;
+      font-size: 16px;
       border: none;
-      border-radius: 4px;
+      border-radius: 8px;
+      background: var(--primary-color);
+      color: white;
       cursor: pointer;
+      transition: all 0.3s ease;
     }
 
-    button:hover {
-      background-color: #005bb5;
+    .btn:hover {
+      background: #38b3a9;
+      transform: translateY(-2px);
+      box-shadow: 0 4px 12px rgba(78, 205, 196, 0.3);
+    }
+
+    .welcome-message {
+      font-size: 36px;
+      font-weight: bold;
+      color: var(--primary-color);
+      margin-bottom: 20px;
+    }
+
+    .welcome-subtitle {
+      font-size: 18px;
+      color: #666;
+      margin-bottom: 30px;
+    }
+
+    .right-panel {
+      flex-grow: 1;
+      padding: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     #chatContainer {
       width: 100%;
-      height: calc(100vh - 120px); /* 保留顶部输入区域 */
+      height: 100%;
+      display: none;
     }
   </style>
 </head>
 <body>
-  <!-- 顶部用户输入区域 -->
-  <div class="container">
-    <input type="text" id="userIdInput" placeholder="请输入用户ID（如手机号）" required>
-    <button onclick="initChatWithOAuth()">使用 OAuth 登录并聊天</button>
+  <!-- 左侧面板 -->
+  <div class="left-panel">
+    <!-- 登录内容 -->
+    <div class="login-content" id="loginContent">
+      <div class="logo-container">
+        <img src="https://picsum.photos/200/200" alt="Logo">
+      </div>
+      <h2 class="login-title">BlossomPsy3</h2>
+      <p class="login-subtitle">-皇家饼干-</p>
+      <div class="form-group">
+        <input type="text" id="userIdInput" class="form-control" placeholder="请输入手机号前7位">
+      </div>
+      <button onclick="initChatWithOAuth()" class="btn">登录并聊天</button>
+    </div>
+    
+    <!-- 欢迎内容 -->
+    <div class="welcome-content" id="welcomeContent">
+      <div class="logo-container">
+        <img src="https://picsum.photos/200/200" alt="Logo">
+      </div>
+      <div class="welcome-message">Welcome!</div>
+      <div class="welcome-subtitle">您已成功登录聊天系统</div>
+      <button onclick="logout()" class="btn">退出登录</button>
+    </div>
   </div>
 
-  <!-- 嵌入式聊天窗口 -->
-  <div id="chatContainer"></div>
+  <!-- 右侧聊天面板 -->
+  <div class="right-panel">
+    <div id="chatContainer"></div>
+  </div>
 
   <script>
     const BOT_ID = "7471918135969447962";
     const BACKEND_URL = "https://bpsy.mynatapp.cc/serviceB";
+    let chatClient;
 
     function initChatWithOAuth() {
       const userId = document.getElementById("userIdInput").value;
+      if (!userId) {
+        alert("请输入手机号前7位");
+        return;
+      }
 
       fetch(`${BACKEND_URL}`, {
         method: "POST",
@@ -79,12 +197,19 @@
           return;
         }
 
-        new CozeWebSDK.WebChatClient({
+        // 隐藏登录表单，显示欢迎信息
+        document.getElementById('loginContent').style.display = 'none';
+        document.getElementById('welcomeContent').style.display = 'block';
+        
+        // 初始化聊天组件
+        chatClient = new CozeWebSDK.WebChatClient({
           config: {
             bot_id: BOT_ID,
+            asstBtn: false,
           },
           componentProps: {
-            title: "Coze 智能助手",
+            title: "BlossomPsy3",
+            asstBtn: false,
           },
           auth: {
             type: "token",
@@ -92,24 +217,42 @@
             onRefreshToken: async () => {
               const refreshResponse = await fetch(`${BACKEND_URL}`, {
                 method: "POST",
-                headers: {
-                  "Content-Type": "application/json"
-                },
+                headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({ userId: userId }),
               });
               return (await refreshResponse.json()).access_token;
             }
           },
-          userInfo: {
-            userId: userId
+          userInfo: { userId },
+          chatBot: {
+            title: "BlossomPsy3",
+            uploadable: true,
+            width: 1000,
           },
-          targetElement: document.getElementById("chatContainer") // 关键：将聊天界面挂载到 div
+          targetElement: document.getElementById("chatContainer")
         });
+
+        // 显示聊天容器
+        document.getElementById('chatContainer').style.display = 'block';
+        setTimeout(() => {
+          if (chatClient) chatClient.showChatBot();
+        }, 300);
       })
       .catch((error) => {
         console.error("获取令牌失败：", error);
         alert("初始化失败，请检查网络连接或联系管理员");
       });
+    }
+
+    function logout() {
+      // 隐藏聊天和欢迎信息，显示登录表单
+      if (chatClient) {
+        chatClient.hideChatBot();
+        chatClient = null;
+      }
+      document.getElementById('chatContainer').style.display = 'none';
+      document.getElementById('welcomeContent').style.display = 'none';
+      document.getElementById('loginContent').style.display = 'block';
     }
   </script>
 </body>
