--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <!-- 登录内容 -->
     <div class="login-content" id="loginContent">
       <div class="logo-container">
-        <img src="https://picsum.photos/200/200" alt="Logo">
+        <img src="blossompsy.jpg" alt="Logo">
       </div>
       <h2 class="login-title">BlossomPsy3</h2>
       <p class="login-subtitle">-皇家饼干-</p>
