--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
       </div>
       <button onclick="initChatWithOAuth()" class="btn">登录并聊天</button>
       <!-- 调整后的文本位置，添加20px上边距 -->
-      <p class="login-subtitle" style="margin-top: 20px;">All rights reserved by 皇家饼干-</p>
+      <p class="login-subtitle" style="margin-top: 20px;">All rights reserved by 皇家饼干</p>
     </div>
     
     <!-- 欢迎内容 -->
