--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
       transition: all 0.3s ease;
       position: relative;
       overflow: hidden;
+      min-width: 180px;
     }
 
     .btn:disabled {
