--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <img src="blossompsy.jpg" alt="Logo">
       </div>
       <div class="welcome-message">Welcome!</div>
-      <div class="welcome-subtitle">你的参与是BlossomPsy进步的动力</div>
+      <div class="welcome-subtitle">笔下犹能有花开</div>
       <button onclick="logout()" class="btn">退出登录</button>
     </div>
   </div>
