--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       <div class="logo-container">
         <img src="blossompsy.jpg" alt="Logo">
       </div>
-      <h2 class="login-title">BlossomPsy3</h2>
+      <h2 class="login-title">BlossomPsy3.1</h2>
       <div class="form-group">
         <input type="text" id="userIdInput" class="form-control" placeholder="请输入手机号前7位">
       </div>
@@ -207,7 +207,7 @@
         <span>登录并开始测评</span>
       </button>
       <!-- 调整后的文本位置，添加20px上边距 -->
-      <p class="login-subtitle" style="margin-top: 20px;">All rights reserved by 皇家饼干</p>
+      <p class="login-subtitle" style="margin-top: 20px;">All rights reserved by Royal Biscuit</p>
     </div>
     
     <!-- 欢迎内容 -->
