--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         <input type="text" id="userIdInput" class="form-control" placeholder="请输入手机号前7位">
       </div>
       <button onclick="initChatWithOAuth()" id="loginBtn" class="btn">
-        <span>登录并开始测评</span>
+        <span>实验进行中，请勿使用</span>
       </button>
       <!-- 调整后的文本位置，添加20px上边距 -->
       <p class="login-subtitle" style="margin-top: 20px;">All rights reserved by Royal Biscuit</p>
