--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <span>进入测试</span>
       </button>
       <!-- 调整后的文本位置，添加20px上边距 -->
-      <p class="login-subtitle" style="margin-top: 20px;">All rights reserved by Royal Biscuit</p>
+      <p class="login-subtitle" style="margin-top: 20px;">All rights reserved by 皇家饼干</p>
     </div>
     
     <!-- 欢迎内容 -->
